--- a/SELinux_tools/CMakeLists.txt
+++ b/SELinux_tools/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.5)
 
-project(selinux VERSION 0.1 LANGUAGES CXX)
+project(SELinux_tools VERSION 0.1 LANGUAGES CXX)
 
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
@@ -12,8 +12,6 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
 
-set(WIN32_ICON ${CMAKE_SOURCE_DIR}/resources/icon.rc)
-
 set(PROJECT_SOURCES
         main.cpp
         widget.cpp
@@ -21,8 +19,10 @@ set(PROJECT_SOURCES
         widget.ui
 )
 
+set(WIN32_ICON ${CMAKE_SOURCE_DIR}/resources/icon.rc)
+
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
-    qt_add_executable(selinux
+    qt_add_executable(SELinux_tools
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
         denieditem.h denieditem.cpp
@@ -31,32 +31,32 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         ${WIN32_ICON}
     )
 # Define target properties for Android with Qt 6 as:
-#    set_property(TARGET selinux APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
+#    set_property(TARGET SELinux_tools APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
 #                 ${CMAKE_CURRENT_SOURCE_DIR}/android)
 # For more information, see https://doc.qt.io/qt-6/qt-add-executable.html#target-creation
 else()
     if(ANDROID)
-        add_library(selinux SHARED
+        add_library(SELinux_tools SHARED
             ${PROJECT_SOURCES}
         )
 # Define properties for Android with Qt 5 after find_package() calls as:
 #    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
     else()
-        add_executable(selinux
+        add_executable(SELinux_tools
             ${PROJECT_SOURCES}
         )
     endif()
 endif()
 
-target_link_libraries(selinux PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
+target_link_libraries(SELinux_tools PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
 
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
 # If you are developing for iOS or macOS you should consider setting an
 # explicit, fixed bundle identifier manually though.
 if(${QT_VERSION} VERSION_LESS 6.1.0)
-  set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER com.example.selinux)
+  set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER com.example.SELinux_tools)
 endif()
-set_target_properties(selinux PROPERTIES
+set_target_properties(SELinux_tools PROPERTIES
     ${BUNDLE_ID_OPTION}
     MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
     MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
@@ -65,12 +65,12 @@ set_target_properties(selinux PROPERTIES
 )
 
 include(GNUInstallDirs)
-install(TARGETS selinux
+install(TARGETS SELinux_tools
     BUNDLE DESTINATION .
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
 
 if(QT_VERSION_MAJOR EQUAL 6)
-    qt_finalize_executable(selinux)
+    qt_finalize_executable(SELinux_tools)
 endif()
